import from webapp, calling routes on agent

--- a/governanceCollector/webapp/app/index.html
+++ b/governanceCollector/webapp/app/index.html
@@ -27,11 +27,9 @@
     <script src="node_modules/angular-bootstrap/ui-bootstrap.js "></script>
     <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.min.js "></script>
     <!--<script src="node_modules/angular-sanitize/angular-sanitize.min.js "></script>-->
-    <!--<script src="node_modules/ng-file-upload/ng-file-upload.js "></script>
-    <script src="node_modules/oclazyload/dist/ocLazyLoad.js "></script>-->
+    <!--<script src="node_modules/oclazyload/dist/ocLazyLoad.js "></script>-->
     <script src="node_modules/ng-dialog/js/ngDialog.min.js "></script>
-    <!--<script src="node_modules/chosen/chosen.jquery.js "></script>-->
-    <!--<script src="node_modules/angular-chosen-localytics/dist/angular-chosen.min.js "></script>-->
+    <script src="node_modules/ng-file-upload/dist/ng-file-upload.js"></script>
     <script src="node_modules/angular-socket-io/socket.min.js "></script>
     <script src="node_modules/socket.io-client/dist/socket.io.js "></script>
     <script src="node_modules/leonardo-ui/dist/leonardo-ui.js "></script>
