--- a/governanceCollector/webapp/app/governance-collector-body.html
+++ b/governanceCollector/webapp/app/governance-collector-body.html
@@ -11,7 +11,7 @@
                 <div id="left">
                     <div id="btnArea" class="govButtons">
                         <div id="selectArea">
-                            <select name="avail-servers" id="availServers" ng-change="model.selectServer()" ng-model="model.currentServer" ng-init="model.initExistingServer()" class="lui-select" ng-options="server.hostname for server in model.existingServers track by server.hostname"
+                            <select name="avail-servers" id="availServers" ng-change="model.selectServer()" ng-model="model.currentServer" ng-init="model.initExistingServer()" class="lui-select" ng-options="server.hostname for server in model.serverList track by server.hostname"
                                 style="width:80%;">
                             </select>
                             <button class="lui-button" ng-click="model.openConfig()">Add</button>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div id="right">
-                    <div class="lui-label" ng-hide="model.currentServer.hostname==model.existingServers[0].hostname">http://{{model.hostname}}:{{model.port}}</div>
+                    <div class="lui-label" ng-hide="model.currentServer.hostname==model.serverList[0].hostname">http://{{model.hostname}}:{{model.port}}</div>
 
                     <div class="govButtons">
                         <button id="goButton" class="lui-button lui-disabled" ng-click="model.gogoGovernance()" ng-class="(model.boolGenMetadata || model.boolParseLoadScripts || model.boolGenQVDs || model.boolRefreshGovernanceApp) ? 'lui-button lui-button--success' : 'lui-button lui-disabled'">Governance!</button>
