--- a/governanceCollector/webapp/app/governance-collector-body.html
+++ b/governanceCollector/webapp/app/governance-collector-body.html
@@ -1,8 +1,10 @@
 <div>
     <div id="page-content-header" class="navbar-fixed-top flex-container">
         <h1 class="title">Qlik Sense Governance Collector</h1>
-        <button style="float:right;margin-right:20px;margin-top:20px;" class="lui-button  lui-button--toolbar-inverse" id="help-dialog" ng-click="model.openHelp()">?</button>
-        <button style="float:right;margin-right:40px;margin-top:20px;" class="lui-button  lui-button--toolbar-inverse" id="config-dialog" ng-click="model.openConfig()"><span class="lui-button__icon  lui-icon  lui-icon--cogwheel" aria-hidden="true"></span></button>
+        <button style="float:right;margin-right:20px;margin-top:20px;" class="lui-button  lui-button--toolbar-inverse" id="help-dialog"
+            ng-click="model.openHelp()">?</button>
+        <button style="float:right;margin-right:40px;margin-top:20px;" class="lui-button  lui-button--toolbar-inverse" id="config-dialog"
+            ng-click="model.openConfig()"><span class="lui-button__icon  lui-icon  lui-icon--cogwheel" aria-hidden="true"></span></button>
     </div>
     <div id="page-content-body">
 
@@ -11,14 +13,15 @@
                 <div id="left">
                     <div id="btnArea" class="govButtons">
                         <div id="selectArea">
-                            <select name="avail-servers" id="availServers" ng-change="model.selectServer()" ng-model="model.currentServer" ng-init="model.initExistingServer()" class="lui-select" ng-options="server.hostname for server in model.serverList track by server.hostname"
+                            <select name="avail-servers" id="availServers" ng-change="model.selectServer()" ng-model="model.currentServer" ng-init="model.initSelectServer()"
+                                class="lui-select" ng-options="server.hostname for server in model.serverList track by server.hostname"
                                 style="width:80%;">
                             </select>
                             <button class="lui-button" ng-click="model.openConfig()">Add</button>
                         </div>
                         <div tooltips tooltip-template="{{model.textGenMetaData}}" tooltip-side="right" tooltip-class="toolies">
-                            <button id="genMetadata" class="lui-button leftButtons" ng-click="model.genMetadata()" ng-class=" model.buttonsEnabled ? (model.boolGenMetadata ? 'lui-button lui-button--success' : 'lui-button') : 'lui-button lui-disabled'" ng-mouseover="model.tipMeta=true"
-                                ng-mouseleave="mode.tipMeta=false">Generate App Metadata</button>
+                            <button id="genMetadata" class="lui-button leftButtons" ng-click="model.genMetadata()" ng-class=" model.buttonsEnabled ? (model.boolGenMetadata ? 'lui-button lui-button--success' : 'lui-button') : 'lui-button lui-disabled'"
+                                ng-mouseover="model.tipMeta=true" ng-mouseleave="mode.tipMeta=false">Generate App Metadata</button>
                         </div>
                         <div tooltips tooltip-template="{{model.textParseLoadScripts}}" tooltip-side="right" tooltip-class="toolies">
                             <button id="parseLoadScripts" class="lui-button leftButtons" ng-click="model.parseLoadScripts()" ng-class="model.buttonsEnabled ? (model.boolParseLoadScripts ? 'lui-button lui-button--success' : 'lui-button') : 'lui-button lui-disabled'">Parse Load Scripts</button>
