--- a/governanceCollector/webapp/app/governance-collector-body.html
+++ b/governanceCollector/webapp/app/governance-collector-body.html
@@ -10,8 +10,12 @@
 
         <form name="form" id="governanceForm" enctype="multipart/form-data" novalidate>
             <div id="main">
+                <div id="far-left"><span><strong>To use the Governance Collector ui:</strong> select a server from the drop down, and click the buttons
+                    to tell the collector what to run. Choose all you want to do on the selected server before clicking the
+                    Governance button.</span>
+                </div>
                 <div id="left">
-                    <div id="btnArea" class="govButtons">
+                    <div id="btnArea" class="govSelectButtons">
                         <div id="selectArea">
                             <select name="avail-servers" id="availServers" ng-change="model.selectServer()" ng-model="model.currentServer" ng-init="model.initSelectServer()"
                                 class="lui-select" ng-options="server.hostname for server in model.serverList track by server.hostname"
@@ -41,10 +45,10 @@
                 </div>
                 <div id="right">
                     <div class="lui-label" ng-hide="model.currentServer.hostname==model.serverList[0].hostname">http://{{model.hostname}}:{{model.port}}</div>
-
-                    <div class="govButtons">
+                    <div class="gogoGov">
                         <button id="goButton" class="lui-button lui-disabled" ng-click="model.gogoGovernance()" ng-class="((model.boolGenMetadata || model.boolParseLoadScripts || model.boolGenQVDs || model.boolRefreshGovernanceApp) && (!model.singleApp || (model.singleApp && model.currentApp.id != null))) ? 'lui-button lui-button--success' : 'lui-button lui-disabled'">Governance!</button>
                     </div>
+                    <div class="lui-label" ng-hide="model.currentServer.hostname==model.serverList[0].hostname || !((model.boolGenMetadata || model.boolParseLoadScripts || model.boolGenQVDs || model.boolRefreshGovernanceApp) && (!model.singleApp || (model.singleApp && model.currentApp.id != null)))">Click above to start processing.</div>
                 </div>
             </div>
             <div id="output" class="frame">
