--- a/governanceCollector/webapp/app/index.html
+++ b/governanceCollector/webapp/app/index.html
@@ -18,9 +18,12 @@
     <link rel="stylesheet " type="text/css " href="node_modules/leonardo-ui/dist/leonardo-ui.css ">
     <link rel="stylesheet " type="text/css " href="node_modules/angular-tooltips/dist/angular-tooltips.min.css ">
     <link rel="stylesheet " type="text/css " href="public/css/governancecollector.css ">
+    <link rel="stylesheet " type="text/css " href="public/css/governance-app-collector.css ">
+    <link rel="stylesheet " type="text/css " href="public/css/governance-access-control-collector.css ">
     <link rel="stylesheet" type="text/css" href="node_modules/ng-dialog/css/ngDialog.min.css">
     <link rel="stylesheet" href="node_modules/ng-dialog/css/ngDialog-theme-default.min.css">
     <link rel="stylesheet " type="text/css " href="public/css/governancecollector.css ">
+    <link rel="stylesheet " type="text/css " href="public/lib/angular-dual-multiselect-directive/dualmultiselect.css ">
     <script src="node_modules/jquery/dist/jquery.min.js "></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
     <script src="node_modules/angular/angular.min.js "></script>
@@ -34,8 +37,10 @@
     <script src="node_modules/socket.io-client/dist/socket.io.js "></script>
     <script src="node_modules/leonardo-ui/dist/leonardo-ui.js "></script>
     <script src="app/main.js"></script>
+    <script src="public/lib/angular-dual-multiselect-directive/dualmultiselect.js"></script>
     <script src="app/governancecollector.component.js"></script>
     <script src="node_modules/angular-tooltips/dist/angular-tooltips.min.js "></script>
+
 
 </head>
 
