--- a/governanceCollector/webapp/app/governance-access-control-collector-body.html
+++ b/governanceCollector/webapp/app/governance-access-control-collector-body.html
@@ -13,10 +13,10 @@
                             Resources
                             <div ng-repeat="resource in model.resources track by $index">
                                 <label class="lui-checkbox">
-                                        <input class="lui-checkbox__input" type="checkbox" aria-label="{{resource}}" id="resourceLabels"/>
+                                        <input class="lui-checkbox__input" type="checkbox" aria-label="{{resource.name}}" id="{{resource.name}}" ng-click="model.checkedResources(resource.name)" value="{{resource}}" ng-checked="{{resource.checked}}"/>
                                     <div class="lui-checkbox__check-wrap">
                                         <span class="lui-checkbox__check" ></span>
-                                        <span class="lui-checkbox__check-text">{{resource}}</span>
+                                        <span class="lui-checkbox__check-text">{{resource.name}}</span>
                                     </div>
     
                                 </label>
@@ -25,10 +25,10 @@
                         <div id="appObjects">App Objects
                             <div ng-repeat="appObject in model.appObjectList track by $index">
                                 <label class="lui-checkbox">
-                                    <input class="lui-checkbox__input" type="checkbox" aria-label="{{appObject}}" id="resourceLabels"/>
+                                    <input class="lui-checkbox__input" type="checkbox" aria-label="{{appObject.name}}" id="{{appObject.name}}" ng-click="model.checkedAppObjects(appObject.name)" value="{{appObject}}" ng-checked="{{appObject.checked}}"/>
                                     <div class="lui-checkbox__check-wrap">
                                         <span class="lui-checkbox__check" ></span>
-                                        <span class="lui-checkbox__check-text">{{appObject}}</span>
+                                        <span class="lui-checkbox__check-text">{{appObject.name}}</span>
                                     </div>
                                 </label>
                             </div>
