--- a/governanceCollector/webapp/app/governance-collector-body.html
+++ b/governanceCollector/webapp/app/governance-collector-body.html
@@ -70,6 +70,7 @@
                     </div>
                 </div>
             </div>
+            <div id="version" style="position:fixed;bottom:0;right:0;margin-bottom:5px;margin-right:5px;">{{model.version}}</div>
         </form>
 
 
