--- a/governanceCollector/webapp/app/governance-save-selection-body.html
+++ b/governanceCollector/webapp/app/governance-save-selection-body.html
@@ -40,8 +40,8 @@
                                     </div>
                                 </label>
                         </div>
-                        <div style="display:flex;justify-content:center;align-items:center;width:570px;">
-                            <div ng-show="model.boolAppMode" id="allAppsCheckBox" style="display:flex;justify-content:center;width:570px;">
+                        <div style="display:flex;justify-content:space-evenly;align-items:center;width:450px;">
+                            <div ng-show="model.boolAppMode" id="allAppsCheckBox" style="display:flex;justify-content:center;max-width:450px;">
                                 <label class="lui-checkbox">
                                     <input class="lui-checkbox__input" type="checkbox" id="boolAppMode" ng-checked="{{model.boolAppMode}}" />
                                     <div class="lui-checkbox__check-wrap">
@@ -53,7 +53,7 @@
                             </div>
                             <div ng-hide="model.boolAppMode" style="display:flex;flex-direction:column;justify-content:center;margin-left:7px;">
                                 <label class="lui-label">Selected Applications</label>
-                                <div class="metaList" style="width:570px;">
+                                <div class="metaList" style="width:450px;">
                                     <ul class="lui-list">
                                         <li class="lui-list__item" ng-repeat="selectedApp in model.dualmultioptions.selectedItems">
                                             <span class="lui-list__text">{{selectedApp.name}}</span>
@@ -61,6 +61,16 @@
                                     </ul>
                                 </div>
                             </div>
+                        </div>
+                        <div id="dataMode" class="right-side-check">
+                            <label class="lui-checkbox">
+                                    <input class="lui-checkbox__input" type="checkbox" id="boolDataMode" ng-checked="{{model.boolDataMode}}" />
+                                    <div class="lui-checkbox__check-wrap">
+                                        <span class="lui-checkbox__check">
+                                        </span>
+                                        <span class="lui-checkbox__check-text">Open apps without data</span>
+                                    </div>
+                                </label>
                         </div>
                     </div>
                     <div id="genAccessControl" style="display:flex;justify-content:space-between">
